json logging, live reload
