# api-spec.yml
@@ -1,30 +1,30 @@
 openapi: 3.0.0
 info:
   title: Dink Derby API
-  description: A REST API for managing users, derbies, catches, and fishing locations in a fishing competition system.
+  description: A REST API for managing anglers, derbies, catches, and fishing locations in a fishing competition system.
   version: 1.0.0
 servers:
   - url: http://localhost:3000
 paths:
-  /api/users:
+  /api/anglers:
     post:
-      summary: Create a new user
+      summary: Create a new angler
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/NewUser'
+              $ref: '#/components/schemas/NewAngler'
       responses:
         '201':
-          description: User created
+          description: Angler created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-  /api/users/{id}:
+                $ref: '#/components/schemas/Angler'
+  /api/anglers/{id}:
     get:
-      summary: Get user by ID
+      summary: Get angler by ID
       parameters:
         - name: id
           in: path
@@ -33,13 +33,13 @@ paths:
             type: string
       responses:
         '200':
-          description: User details
+          description: Angler details
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/Angler'
     put:
-      summary: Update a user
+      summary: Update a angler
       parameters:
         - name: id
           in: path
@@ -51,12 +51,12 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/NewUser'
+              $ref: '#/components/schemas/NewAngler'
       responses:
         '200':
-          description: User updated
+          description: Angler updated
     delete:
-      summary: Delete a user
+      summary: Delete a angler
       parameters:
         - name: id
           in: path
@@ -65,7 +65,7 @@ paths:
             type: string
       responses:
         '204':
-          description: User deleted
+          description: Angler deleted
   /api/derbies:
     get:
       summary: Get all derbies
@@ -107,10 +107,31 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Catch'
+  /api/derbies/angler/{id}:
+    get:
+      summary: Get derbies by angler ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+          description: The ID of the angler
+      responses:
+        '200':
+          description: A list of derbies the angler is participating in
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Derby'
+        '500':
+          description: Internal server error
 
 components:
   schemas:
-    User:
+    Angler:
       type: object
       properties:
         _id:
@@ -119,7 +140,7 @@ components:
           type: string
         email:
           type: string
-    NewUser:
+    NewAngler:
       type: object
       properties:
         name:
