# user.go
@@ -1,129 +1,0 @@
-package main
-
-import (
-	"encoding/json"
-	"net/http"
-
-	"github.com/gorilla/mux"
-	"go.mongodb.org/mongo-driver/bson"
-	"go.mongodb.org/mongo-driver/bson/primitive"
-	"go.mongodb.org/mongo-driver/mongo"
-)
-
-type User struct {
-	Name    string  `json:"name"`
-	Email   string  `json:"email"`
-	Derbies []Derby `json:"derbies,omitempty"`
-	Catches []Catch `json:"catches,omitempty"`
-}
-
-var users []User
-
-func getUsers(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json")
-	json.NewEncoder(w).Encode(users)
-}
-
-func createUser(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json")
-	var user User
-	_ = json.NewDecoder(r.Body).Decode(&user)
-
-	newUser, err := db.InsertDocument("DinkDerby", "users", user)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	json.NewEncoder(w).Encode(newUser)
-}
-
-func getUser(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json")
-	params := mux.Vars(r)
-
-	id := params["id"]
-	objectID, err := primitive.ObjectIDFromHex(id)
-	if err != nil {
-		http.Error(w, "Invalid user ID", http.StatusBadRequest)
-		return
-	}
-
-	userResult, err := db.FindDocument("DinkDerby", "users", bson.M{"_id": objectID})
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	if userResult.Err() == mongo.ErrNoDocuments {
-		http.NotFound(w, r)
-		return
-	}
-
-	var user User
-	if err := userResult.Decode(&user); err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	json.NewEncoder(w).Encode(user)
-
-}
-
-func updateUser(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json")
-	params := mux.Vars(r)
-	id := params["id"]
-	objectID, err := primitive.ObjectIDFromHex(id)
-	if err != nil {
-		http.Error(w, "Invalid user ID", http.StatusBadRequest)
-		return
-	}
-	var user User
-	if err := json.NewDecoder(r.Body).Decode(&user); err != nil {
-		http.Error(w, "Invalid request payload", http.StatusBadRequest)
-		return
-	}
-
-	update := bson.M{
-		"$set": user,
-	}
-
-	result, err := db.UpdateDocument("DinkDerby", "users", bson.M{"_id": objectID}, update)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	if result.MatchedCount == 0 {
-		http.NotFound(w, r)
-		return
-	}
-
-	json.NewEncoder(w).Encode(result)
-
-}
-
-func deleteUser(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json")
-	params := mux.Vars(r)
-	id := params["id"]
-	objectID, err := primitive.ObjectIDFromHex(id)
-	if err != nil {
-		http.Error(w, "Invalid user ID", http.StatusBadRequest)
-		return
-	}
-
-	result, err := db.DeleteDocument("DinkDerby", "users", bson.M{"_id": objectID})
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	if result.DeletedCount == 0 {
-		http.NotFound(w, r)
-		return
-	}
-
-	json.NewEncoder(w).Encode(bson.M{"message": "User deleted"})
-}
